--- a/MilitappWeb.Web/MilitappWeb.Web.csproj
+++ b/MilitappWeb.Web/MilitappWeb.Web.csproj
@@ -138,7 +138,13 @@
     <Compile Include="Models\LegisladorGanadoresModel.cs" />
     <Compile Include="Models\PersonaModel.cs" />
     <Compile Include="Models\ResultadoElectoralModel.cs" />
+    <Compile Include="Models\ResultadosGeneralesDiscriminadoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\ResultadoElectoral.Designer.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResultadoElectoral.Designer.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -273,6 +279,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DiputadosGanadores\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ResultadoElectoral.Designer.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResultadoElectoral.Designer.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
