--- a/MilitappWeb.Web/MilitappWeb.Web.csproj
+++ b/MilitappWeb.Web/MilitappWeb.Web.csproj
@@ -287,6 +287,9 @@
       <LastGenOutput>ResultadoElectoral.Designer.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\MilitappWeb.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
